--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                 <li>تطوير مواقع الويب باستخدام WordPress وHTML وCSS</li>
                 <li>إدارة قواعد البيانات وربطها مع المواقع</li>
                 <li>تطوير أنظمة تسجيل دخول وصلاحيات للمستخدمين</li>
-                <li>أساسيات شبكات الحاسوب (شهادة CCNA المستوى الأول)</li>
+                <li>أساسيات شبكات الحاسوب (شهادة CCNA ثلاث مستويات )</li>
                 <li>بناء مواقع تجريبية ونماذج عمل لعرضها للعملاء</li>
                 <li>التعامل مع Google Forms وربطها بخدمات مثل Telegram عبر Google Apps Script</li>
-                <li>إنشاء وإدارة ملفات PDF واستخراج النصوص منها</li>
             </ul>
         </section>
         <section class="interests">
@@ -55,14 +54,14 @@
         </section>
         <section class="motivation">
             <h2>🌱 كلمة ختامية</h2>
+            <p>و لا ننسى دعم اهلي و تشجيعهم ، فكل خطوه اخطيها هي بفضلهم كلهم بدون استثناء  </p> 
+            <p> ولا انسلا ايضا اصدقائي اضداعي العمر و الطرب فنعم اصدقائي و نعم نصحهم لي فلم يكلو او يتعبو مني قط فشكرهم واجب لما عملوه معي </p>
+            <p>و كل الشكر و التقدير لمن سار معي و عرفني صدق المعرفه  </p>    
             <p>كل فكرة صغيرة قد تكون بداية لمشروع كبير... استمر في التعلم، وثق أن الخطوة القادمة قد تغيّر مستقبلك.</p>
         </section>
         <footer>
-            <p>📩 هل لديك فكرة أو مشروع؟ يسعدني النقاش والتعاون! تواصل معي عبر:
-                <a href="mailto:your.email@example.com">your.email@example.com</a>
-            </p>
             <p>🔗 مواقع ذات صلة:
-                <a href="https://github.com/your-github-username" target="_blank"> الموقع تحت التطوير </a> |
+                <a href="https://h-akeel.github.io/teame-projact/" target="_blank"> الموقع تحت التطوير </a> |
                 <a href="https://rabia-archive.rf.gd/dashboard.php" target="_blank">موقع ارشفه الموظفين </a>
             </p>
         </footer>
