--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <div class="header-flex">
-                <img src="profile.jpg" alt="صورة شخصية" class="profile-pic">
-                <div>
-                    <h1>حسين عقيل صبري مجيد</h1>
+           
+                    <h1>حسين عقيل صبري مجيد الهماشي</h1>
                     <p class="subtitle">خريج تكنولوجيا المعلومات من جامعة تكنولوجيا المعلومات والاتصالات – شغوف بالتعلم الذاتي والعمل التقني</p>
                 </div>
             </div>
@@ -55,7 +53,7 @@
         <section class="motivation">
             <h2>🌱 كلمة ختامية</h2>
             <p>و لا ننسى دعم اهلي و تشجيعهم ، فكل خطوه اخطيها هي بفضلهم كلهم بدون استثناء  </p> 
-            <p> ولا انسلا ايضا اصدقائي اضداعي العمر و الطرب فنعم اصدقائي و نعم نصحهم لي فلم يكلو او يتعبو مني قط فشكرهم واجب لما عملوه معي </p>
+            <p> ولا انسى  ايضا اصدقائي اضداعي العمر و الطرب فنعم اصدقائي و نعم نصحهم لي فلم يكلو او يتعبو مني قط فشكرهم واجب لما عملوه معي </p>
             <p>و كل الشكر و التقدير لمن سار معي و عرفني صدق المعرفه  </p>    
             <p>كل فكرة صغيرة قد تكون بداية لمشروع كبير... استمر في التعلم، وثق أن الخطوة القادمة قد تغيّر مستقبلك.</p>
         </section>
