--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                     <p class="subtitle">خريج تكنولوجيا المعلومات من جامعة تكنولوجيا المعلومات والاتصالات – شغوف بالتعلم الذاتي والعمل التقني</p>
                 </div>
             </div>
+    <div class="container">
+        <a href="profile/index.html" > المزيد هنا ..!</a>
+    </div>
         </header>
         <section class="about">
             <h2>💬 من أنا</h2>
@@ -68,3 +71,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
