--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     <p class="subtitle">خريج تكنولوجيا المعلومات من جامعة تكنولوجيا المعلومات والاتصالات – شغوف بالتعلم الذاتي والعمل التقني</p>
                 </div>
             </div>
-    <div class="container">
-        <a href="profile/index.html" > المزيد هنا ..!</a>
-    </div>
+            <div class="container" style="margin: 20px auto;">
+            <a href="profil/index.html" style="display: inline-block; padding: 12px 25px; background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: white; text-decoration: none; border-radius: 30px; font-weight: bold; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);">المزيد هنا ..!</a>
+        </div
         </header>
         <section class="about">
             <h2>💬 من أنا</h2>
@@ -71,4 +71,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
