--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div
         </header>
         <section class="about">
-            <h2>💬 من أنا</h2>
-            <p>أؤمن بأن كل يوم هو فرصة جديدة للتعلم. أحب الاكتشاف الذاتي وأسعى لتطبيق ما أتعلمه في مشاريع واقعية تعكس شغفي بالتقنية.</p>
+            <h2>هذه الزهرة من حديقة صبركم وتعبكم </h2>
+            <p>إلى من منحوني دون حساب، إلى من كانوا سندي في كل خطوة، إلى أمي وأبي: كلمات الشكر لن توفيكم حقكم، لكني أعدكم أن هذا التخرج هو فقط البداية لرد جزء من جميلكم. هذه الشهادة هي ثمرة تعب أياديكم البيضاء وصبركم الذي لا ينضب. كل ما أنا فيه اليوم هو بسببكم. أحبكم</p>
         </section>
         <section class="skills">
             <h2>🛠️ مهاراتي</h2>
